# langgraph-101

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt  setup.md  v1-test.ipynb
agents/: adv_sql_agent.py  adv_sql_music_store_supervisor.py  adv_sql_music_store_supervisor_with_interrupt.py  basic_sql_agent.py  corrective_rag.py  email_agent.py  invoice_agent.py  lg101-weather-agent.py  memory_enabled_music_store_supervisor_with_interrupt.py  memory_hil_rag.py  music_agent.py  music_store_supervisor.py  music_store_supervisor_with_interrupt.py  simple_rag.py  swarm.py  utils.py
agents/deep_agent/: AGENTS.md  agent.py  graph.py
agents/deep_agent/skills/linkedin-post/: SKILL.md
agents/deep_agent/skills/twitter-post/: SKILL.md
agents/email_agent/: graph.py
agents/email_assistant/: email_agent.py
agents/lg101/: weather-agent.py
agents/music_store/: invoice_agent.py  memory_enabled_music_store_supervisor_with_interrupt.py  music_agent.py  music_store_supervisor.py  music_store_supervisor_with_interrupt.py
agents/researcher/: graph.py  models.py  utils.py
mcp/: email_tools.py
notebooks/: 0_test_setup.ipynb  1_simple_rag.ipynb  2_corrective_rag.ipynb  3_query_expansion.ipynb  4_human_in_the_loop.ipynb  4_memory_and_HIL.ipynb  advanced_sql_multi_agent.ipynb  email_agent.ipynb  langgraph_101.ipynb  langgraph_101_v2.ipynb  langgraph_advanced_concepts.ipynb  langgraph_basics.ipynb  models.py  multi_agent.ipynb  multi_agent_advanced_sql_agent.ipynb  multi_agent_bedrock.ipynb  setup.md  utils.py
notebooks/101/: 101_langchain_langgraph.ipynb
notebooks/201/: deep_agents.ipynb  deep_agents_202.ipynb  deep_agents_extra.ipynb  deepagents.ipynb  email_agent.ipynb  multi_agent.ipynb  research_agent.ipynb
notebooks/301/: deep_agents_301.ipynb
notebooks/LG101/: langgraph_101.ipynb  langgraph_102.ipynb
notebooks/LG201/: NOT-WORKING-RIGHT-NOW-research_agent.ipynb  email_agent.ipynb  multi_agent.ipynb  research_agent.ipynb
notebooks/utils/: utils.py
studio/: .env.example  corrective_rag.py  hil.py  langgraph.json  load_documents.py  query_expansion.py  requirements.txt  simple_rag.py  utils.py
utils/: __init__.py  models.py  utils.py
